Internal Roughing Cycles Completed all the logic of Roughing Cycles Completed

--- a/app/src/main/res/layout/activity_internal_roughing_cycle_xdirection_g72.xml
+++ b/app/src/main/res/layout/activity_internal_roughing_cycle_xdirection_g72.xml
@@ -533,6 +533,7 @@
                 android:textColorHint="@color/dark_grey"
                 android:textSize="14sp" />
 
+            <!-- Set and Delete Buttons -->
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/setBtn"
                 android:layout_width="150dp"
