--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -768,18 +768,25 @@
     <ScrollView
         android:id="@+id/programProceedCodeSv"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/programProceedCodeRl"
-        android:layout_height="250dp"
         android:layout_margin="20dp"
-        android:background="#E8E8E8">
+        android:background="#E8E8E8"
+        android:fillViewport="true">
 
-        <TextView
-            android:id="@+id/outputTv"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:textSize="14sp"
-            android:textColor="#000000"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/outputTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textSize="14sp"
+                android:textColor="#000000"/>
+        </LinearLayout>
     </ScrollView>
 
     <androidx.appcompat.widget.AppCompatButton
